<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/containerScrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/pub_page_horizontal_margin"
		android:layout_marginRight="@dimen/pub_page_horizontal_margin">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/reservation"
			android:textSize="30sp"
			android:textColor="@color/primary"
			android:layout_marginLeft="15dp"
			android:layout_marginTop="15dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<ImageButton
				android:id="@+id/removePeopleButton"
				android:layout_width="36dp"
				android:layout_height="36dp"
				android:contentDescription="@string/add_people"
				android:src="@drawable/ic_remove_black_24dp"
				android:tint="@color/dark_red"
				android:background="@null"
				android:scaleType="fitCenter"/>

			<EditText
				android:id="@+id/reservationCount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:maxLength="2"
				android:background="@null"
				android:text="1"
				android:ems="2"
				android:gravity="center"
				android:textSize="28sp"
				android:padding="0dp"
				android:imeOptions="actionNext"
				android:maxLines="1"
				android:singleLine="true"
				tools:ignore="HardcodedText"/>

			<ImageButton
				android:id="@+id/addPeopleButton"
				android:layout_width="36dp"
				android:layout_height="36dp"
				android:contentDescription="@string/add_people"
				android:src="@drawable/ic_add_black_24dp"
				android:tint="@color/dark_green"
				android:background="@null"
				android:scaleType="fitCenter"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/seats"
				android:textSize="20sp"
				android:layout_marginLeft="10dp"/>

		</LinearLayout>

		<EditText
			android:id="@+id/nameEditText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/your_name"
			android:textSize="20sp"
			android:maxLines="1"
			android:singleLine="true"
			android:maxLength="25"
			android:imeOptions="actionDone"/>

		<TextView
			android:id="@+id/reservationDateTime"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="Duminică, 8 Noiembrie 2015 ora 17:00"
			android:textSize="24sp"
			android:gravity="center"
			android:layout_gravity="center"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="10dp"/>

		<Spinner
			android:id="@+id/reservationZone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>

		<Button
			android:id="@+id/submitReservation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:minWidth="196dp"
			android:text="@string/submit"
			android:layout_gravity="center"
			android:gravity="center"
			android:backgroundTint="@color/primary_dark"
			android:textColor="@color/white"
			android:layout_marginBottom="10dp"/>

	</LinearLayout>

</ScrollView>
