<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<TextView
		android:id="@+id/header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/book_for_half_hour"
		android:textSize="22sp"
		android:layout_gravity="center"
		android:gravity="center"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/header"
		android:gravity="center">

		<ImageButton
			android:id="@+id/removePeopleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/add_people"
			android:layout_marginLeft="15dp"
			android:src="@drawable/ic_remove_black_24dp"
			android:tint="@color/dark_red"
			android:background="@null"
			android:scaleType="centerInside"/>

		<EditText
			android:id="@+id/reservationCount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:maxLength="2"
			android:background="@null"
			android:text="1"
			android:textSize="24sp"
			tools:ignore="HardcodedText"/>

		<ImageButton
			android:id="@+id/addPeopleButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/add_people"
			android:src="@drawable/ic_add_black_24dp"
			android:tint="@color/dark_green"
			android:background="@null"
			android:scaleType="centerInside"/>

		<Spinner
			android:id="@+id/reservationZone"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:gravity="center"/>

		<EditText
			android:id="@+id/name"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:hint="@string/your_name"/>

	</LinearLayout>

</RelativeLayout>