<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<fragment
		android:id="@+id/map"
		android:name="com.google.android.gms.maps.SupportMapFragment"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		tools:context=".StationMapActivity"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/status_bar_height"
		android:background="#000"
		android:gravity="center_vertical"
		android:padding="4dp">

		<ProgressBar
			android:id="@+id/refreshProgress"
			android:layout_width="@dimen/status_bar_button_size"
			android:layout_height="@dimen/status_bar_button_size"
			android:indeterminate="true"
			android:padding="4dp"/>

		<ImageView
			android:id="@+id/successIndicator"
			android:layout_width="@dimen/status_bar_button_size"
			android:layout_height="@dimen/status_bar_button_size"
			android:contentDescription="@string/refresh_success"
			android:scaleType="centerInside"
			android:src="@drawable/ic_done"
			android:tint="@color/dark_green"
			android:visibility="gone"/>

		<ImageView
			android:id="@+id/failureIndicator"
			android:layout_width="@dimen/status_bar_button_size"
			android:layout_height="@dimen/status_bar_button_size"
			android:contentDescription="@string/refresh_fail"
			android:scaleType="centerInside"
			android:src="@drawable/ic_fail"
			android:tint="@color/dark_red"
			android:visibility="gone"/>

		<TextView
			android:id="@+id/lastRefreshTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="8dp"
			android:layout_marginStart="8dp"
			android:text=""
			android:textColor="@color/white"/>

		<View
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"/>

		<ImageButton
			android:id="@+id/refreshButton"
			android:layout_width="@dimen/status_bar_button_size"
			android:layout_height="@dimen/status_bar_button_size"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:background="@color/transparent"
			android:contentDescription="@string/action_refresh"
			android:scaleType="centerInside"
			android:src="@drawable/ic_refresh"/>

	</LinearLayout>

</LinearLayout>
