<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">


	<ViewSwitcher
		android:id="@+id/loadingErrorViewSwitcher"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminate="true"
			android:layout_gravity="center"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/error_loading_content"
			android:textSize="24sp"
			android:textStyle="bold"/>

	</ViewSwitcher>

	<ViewSwitcher
		android:id="@+id/loadingPubViewSwitcher"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">

		<ScrollView
			android:id="@+id/containerScrollView"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<RelativeLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<RelativeLayout
					android:id="@+id/headerLayout"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<ImageView
						android:id="@+id/pubBanner"
						android:layout_width="match_parent"
						android:layout_height="200dp"
						android:scaleType="centerCrop"
						android:src="@drawable/banner_placeholder"
						android:contentDescription="@string/content_description_pub_banner"/>


					<TextView
						android:id="@+id/pubName"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="The best pub there ever was"
						android:textStyle="bold"
						android:textSize="24sp"
						android:gravity="center"
						android:layout_alignLeft="@id/pubBanner"
						android:layout_alignBottom="@id/pubBanner"
						android:layout_marginLeft="15dp"
						android:layout_marginBottom="15dp"
						android:textColor="@color/white"
						android:shadowColor="@color/black"
						android:shadowDx="1.5"
						android:shadowDy="1.3"
						android:shadowRadius="2.6"/>


				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/availableSeatsLayout"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@id/headerLayout"
					android:layout_centerHorizontal="true">

					<TextView
						android:id="@+id/availableSeats"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textSize="96sp"
						android:text="61"
						android:textColor="@color/primary_dark"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/available_seats"
						android:textSize="36sp"
						android:layout_toRightOf="@id/availableSeats"
						android:layout_alignTop="@id/availableSeats"
						android:layout_alignBottom="@id/availableSeats"
						android:layout_marginLeft="10dp"
						android:textColor="@color/primary"
						android:gravity="center"/>

					<TextView
						android:id="@+id/phoneNumberLabel"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:autoLink="phone"
						android:clickable="true"
						android:linksClickable="true"
						android:layout_below="@id/availableSeats"
						android:text="@string/phone_label"
						android:textSize="20sp"
						android:layout_marginLeft="20dp"
						android:textColor="@color/primary_dark"
						android:layout_marginBottom="7dp"/>

					<TextView
						android:id="@+id/phoneNumber"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:autoLink="phone"
						android:clickable="true"
						android:linksClickable="true"
						android:layout_below="@id/availableSeats"
						android:layout_toRightOf="@id/phoneNumberLabel"
						android:text="072656977"
						android:textSize="20sp"
						android:layout_marginLeft="5dp"
						android:textColor="@color/primary_dark"
						android:layout_marginBottom="7dp"/>

				</RelativeLayout>

				<View
					android:id="@+id/separator2"
					android:layout_width="wrap_content"
					android:layout_height="1dp"
					android:background="@color/primary_light"
					android:layout_below="@id/availableSeatsLayout"
					android:layout_marginLeft="@dimen/pub_page_horizontal_margin"
					android:layout_marginRight="@dimen/pub_page_horizontal_margin"/>

				<TextView
					android:id="@+id/timeTable"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/time_table"
					android:textSize="18sp"
					android:layout_marginTop="5dp"
					android:layout_below="@id/separator2"
					android:layout_centerHorizontal="true"
					android:layout_marginLeft="10dp"
					android:textColor="@color/primary"
					android:visibility="gone"/>

				<View
					android:id="@+id/separator3"
					android:layout_width="wrap_content"
					android:layout_height="1dp"
					android:background="@color/primary_light"
					android:layout_below="@id/timeTable"
					android:layout_marginTop="5dp"
					android:layout_marginLeft="@dimen/pub_page_horizontal_margin"
					android:layout_marginRight="@dimen/pub_page_horizontal_margin"
					android:visibility="gone"/>

				<TextView
					android:id="@+id/pubDescription"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="khfafjebnaren kba bnaerj bnaserln bsebnr kbearsi rbzen lkbzndr bnzdfr ndbndflk nmbzdfkln nknf nbsjdnb jerzsn bjsdn lznb lkxzbn xkln blktbnbn vkfnh bf kfljd jbsdfj bsdj bsdfkjb kf hbsdjbkdfjsb jksbfbj  kfsbbjfsdk jbsdfkj bsdkj vfhadfjsh sdh bsdfhuh bsdjih sbndfij bfsdjinb uidsh isufrnh irubnsuirfn brusenb zrd kbzhhb jkhjk brhbjk hrbjk hjk fnzbr znbi ernb odnbr lhi"
					android:textSize="16sp"
					android:textColor="@color/dark_grey"
					android:layout_gravity="center"
					android:gravity="center"
					android:layout_centerHorizontal="true"
					android:layout_below="@id/separator3"
					android:layout_marginTop="@dimen/pub_page_spacing"
					android:layout_marginLeft="@dimen/pub_page_horizontal_margin"
					android:layout_marginRight="@dimen/pub_page_horizontal_margin"/>

			</RelativeLayout>

		</ScrollView>

	</ViewSwitcher>

	<View
		android:id="@+id/separator1"
		android:layout_width="wrap_content"
		android:layout_height="1dp"
		android:background="@color/primary_light"/>

	<LinearLayout
		android:id="@+id/buttonBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/pub_page_horizontal_margin"
		android:paddingRight="@dimen/pub_page_horizontal_margin"
		android:gravity="center"
		android:background="@color/primary"
		style="?android:buttonBarStyle">

		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:button="@drawable/ic_favorite_selector"
			android:buttonTint="@color/dark_red"
			android:checked="false"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="10dp"
			android:enabled="false"/>

		<Button
			style="?android:buttonBarButtonStyle"
			android:id="@+id/makeReservationButton"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_marginLeft="6dp"
			android:minHeight="@dimen/button_height"
			android:text="@string/make_reservation"
			android:textSize="14sp"
			android:textColor="@color/white"
			android:enabled="false"/>

	</LinearLayout>

	<FrameLayout
		android:id="@+id/reservationFragmentContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

</LinearLayout>
